# german-grammar-exercise-app

./: .gitignore  EXERCISE_GENERATION_REPORT.md  NATURALNESS_CLEANUP_REPORT.md  ONTOLOGICAL_MANIFEST.md  README.md  generate_scale_exercises.py  pyproject.toml  requirements.txt  streamlit_app.py
german_grammar_app/: __init__.py
german_grammar_app/app/: __init__.py  engine.py  loader.py  models.py  session.py  validator.py
german_grammar_app/cli/: __init__.py  main.py
german_grammar_app/data/exercises/a2_1/: kasus.json  partizip_ii.json  praeposition.json  reflexiv.json  trennbar.json
german_grammar_app/data/exercises/a2_2/: kasus.json
german_grammar_app/data/schema/: exercise.schema.json
